Add overlay service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Angular Sandbox App</h1>
+<button (click)="modal.open()">Open modal</button>
+
+<app-modal #modal>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique tempora architecto veritatis cupiditate ipsam
+        distinctio laudantium, voluptate omnis doloremque voluptatem voluptates quidem, quo quod? Reiciendis
+        reprehenderit voluptate quam. Sunt, nam.</p>
+</app-modal>
