--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+.overlay {
+    border: 1px solid red;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
